Fix rootDeviceHints path for SNO base
rootDeviceHints need to be under spec. Also, adding a patch in overlay.
CTONET-2901 #close Fixed

--- a/overlay/sno/patches/bmh-rna4-patch.yaml
+++ b/overlay/sno/patches/bmh-rna4-patch.yaml
@@ -17,3 +17,6 @@
 - op: replace
   path: /metadata/name
   value: metal1
+- op: replace
+  path: /spec/rootDeviceHints/deviceName
+  value: /dev/nvme0n1
